--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,6 +5,8 @@ $colorNaranjaGD:   #f8af40;
 $colorNegro:       #000;
 $colorRosaGD:      #ddb6f1;
 $colorMorado:      #9c1ede;
+$ColorGris:        #314652;
+
 
 * {
     margin: 0;
@@ -362,81 +364,77 @@ $colorMorado:      #9c1ede;
     }
 }
 
-
-
-.mainPefil{
+.containerPerfil{
     display: flex;
     flex-direction: column;
-    width: auto;
-    max-width: 35em;
-    overflow: hidden;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: white;
-    border-radius: 30px;
-    margin: 1rem;
-    box-shadow: 7px 13px 37px rgba(0, 0, 0, 0.6);
-    header{
-        width: 100%;
-        height: 200px;
-        overflow: hidden;
-        position: relative;
-        img{
-            width: 100%;
-            height: auto;
-            border-radius: 30px 0px 0px;
-        }
+    justify-content: center;
+    align-items: center;
+    margin-top: 0.3rem;
+    .mainPefil:hover{
+        transform: scale(1.03);
     }
-    section{
-        background-color: $colorMorado;
-        padding: 10px;
-        overflow: hidden;
-        text-align: center;
-        h2{
-            margin: 0.5em 0;
-            color: $colorBlanco;
+    .mainPefil{
+        display: flex;
+        flex-direction: column;
+        width: auto;
+        max-width: 30em;
+        border-radius: 30px;
+        margin:2rem;
+        box-shadow: 7px 13px 37px rgba(0, 0, 0, 0.6);
+        img{
+            border-radius: 30px 30px 0px 0px;
         }
-        h3{
-            color: $colorBlanco;
-        }
-        p{
-            margin: 1em 0;
-            color: $colorBlanco;
-        }
-        ul{
-            li{
-                list-style: none;
-                display: inline-block;
-                margin: 0.5em 0.2em;
-                a {
-                    text-decoration: none;
-                    background-color: #314652;
-                    color: white;
-                    width: 30px;
-                    height: 30px;
-                    line-height: 30px !important;
-                    border-radius: 5px;
-                    transition: all 0.17s ease-in-out;
-                }
-                a:hover{
-                    transform: scale(1.3);
+        section{
+            background-color: $colorMorado;
+            padding: 10px;
+            overflow: hidden;
+            text-align: center;
+            h2{
+                margin: 0.5em 0;
+                color: $colorBlanco;
+            }
+            h3{
+                color: $colorBlanco;
+            }
+            p{
+                margin: 1em 0;
+                color: $colorBlanco;
+            }
+            ul{
+                li{
+                    list-style: none;
+                    display: inline-block;
+                    margin: 0.5em 0.2em;
+                    a {
+                        text-decoration: none;
+                        background-color: #314652;
+                        color: white;
+                        width: 30px;
+                        height: 30px;
+                        line-height: 30px !important;
+                        border-radius: 5px;
+                        transition: all 0.17s ease-in-out;
+                    }
+                    a:hover{
+                        transform: scale(1.3);
+                    }
                 }
             }
         }
-    }
-    .footerPerfil{
-        width: 100%;
-        height: 60px;
-        background-color: #314652;
-        color: white;
-        font-weight: 500;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        .footerPerfil{
+            width: 100%;
+            height: 65px;
+            color: white;
+            font-weight: 500;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 0;
+            gap: 10px;
+        }
     }
 }
+
 
 
 .mainProducto{
