--- a/css/style.css
+++ b/css/style.css
@@ -3,74 +3,56 @@
   padding: 0;
   box-sizing: border-box; }
 
-.navbar {
-  padding: 0; }
-
-.logo {
-  width: 110px;
-  padding: 0px; }
-
-.container-fluid {
-  background-color: #02AFFE; }
-
-.header {
-  grid-area: header;
-  background-color: #02AFFE;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0px 50px 0px 0px; }
-  .header nav {
-    padding-right: 0.15; }
-    .header nav ul {
-      display: flex;
-      list-style: none; }
-      .header nav ul li a {
-        text-decoration: none;
-        padding: 1rem;
-        color: white;
-        border-right: 1px solid #9c1ede;
-        font-size: 1.35rem; }
-
 .main {
   grid-area: main;
   background-color: #141D3C;
   color: #ffffff;
   justify-content: center; }
+  .main .main__index .filtros {
+    background-color: #f8af40;
+    align-items: center;
+    justify-content: space-evenly;
+    max-height: 300px;
+    width: 100%;
+    color: #000;
+    font-weight: 650;
+    font-size: 0.8rem;
+    display: flex;
+    text-align: center;
+    padding: 0.5rem 1rem;
+    margin-top: 0.3rem; }
+    .main .main__index .filtros .filtro_1 {
+      padding: 0.2rem; }
+      .main .main__index .filtros .filtro_1 h5 {
+        font-size: 1rem; }
+    .main .main__index .filtros .filtro_2 {
+      padding: 0.2rem; }
+      .main .main__index .filtros .filtro_2 h5 {
+        font-size: 1rem; }
+    .main .main__index .filtros button {
+      background-color: #ffffff;
+      border-radius: 0.5rem;
+      max-height: 3rem;
+      justify-content: center;
+      align-items: center; }
+  .main .main__index .aside_container {
+    display: flex;
+    padding: 1rem;
+    justify-content: space-evenly;
+    margin-bottom: 0.3rem; }
 
-.main__index .filtros {
-  background-color: #f8af40;
+header {
+  grid-area: header;
+  background-color: #02AFFE;
+  justify-content: space-between;
   align-items: center;
-  justify-content: space-evenly;
-  max-height: 300px;
-  width: 100%;
-  color: #000;
-  font-weight: 650;
-  font-size: 0.8rem;
-  display: flex;
-  text-align: center;
-  padding: 0.5rem 1rem;
-  margin-top: 0.3rem; }
-  .main__index .filtros .filtro_1 {
-    padding: 0.2rem; }
-    .main__index .filtros .filtro_1 h5 {
-      font-size: 1rem; }
-  .main__index .filtros .filtro_2 {
-    padding: 0.2rem; }
-    .main__index .filtros .filtro_2 h5 {
-      font-size: 1rem; }
-  .main__index .filtros button {
-    background-color: #ffffff;
-    border-radius: 0.5rem;
-    max-height: 3rem;
-    justify-content: center;
-    align-items: center; }
-
-.aside_container {
-  display: flex;
-  padding: 1rem;
-  justify-content: space-evenly;
-  margin-bottom: 0.3rem; }
+  padding: 0; }
+  header .navbar .container-fluid {
+    background-color: #02AFFE;
+    justify-content: space-between; }
+    header .navbar .container-fluid .logo {
+      width: 110px;
+      padding: 0px; }
 
 .aside {
   width: 13.5rem;
@@ -97,7 +79,7 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: auto;
-  grid-template-areas: "header header header" "main   main   main" "footer footer footer";
+  grid-template-areas: "header header header" "main   main   main" "footer footer footer";
   flex-wrap: wrap;
   justify-content: center;
   gap: 1.6rem;
@@ -222,20 +204,20 @@
       border-style: none;
       font-weight: 500; }
 
-.mainContacto {
+.main .mainContacto {
   display: flex;
   flex-direction: column;
   width: 100%;
   margin-top: 0.3rem;
   text-align: justify;
   align-items: center; }
-  .mainContacto .textoContacto {
+  .main .mainContacto .textoContacto {
     display: flex;
     justify-content: center;
     flex-direction: column;
     width: 80%;
     max-width: 37.5rem; }
-    .mainContacto .textoContacto h1 {
+    .main .mainContacto .textoContacto h1 {
       color: #ffffff;
       justify-content: center;
       align-content: center;
@@ -245,41 +227,39 @@
       display: flex;
       padding-top: 1.5rem;
       margin-top: 0.3rem; }
-    .mainContacto .textoContacto p {
+    .main .mainContacto .textoContacto p {
       display: flex;
       justify-content: center; }
-  .mainContacto .carruselesContacto {
+  .main .mainContacto .carruselesContacto {
     justify-content: center;
     width: 100%;
     max-width: 27.5em;
     padding: 1rem 0rem 1rem 0rem;
     margin: 1rem;
     padding: 1rem; }
-  .mainContacto .ubicacionContainer {
+  .main .mainContacto .ubicacionContainer {
     margin-bottom: 1rem;
     width: 70%;
     max-width: 30.5em; }
-    .mainContacto .ubicacionContainer .ubicacion {
+    .main .mainContacto .ubicacionContainer .ubicacion {
       width: 100%; }
-      .mainContacto .ubicacionContainer .ubicacion .ubicacionTexto {
+      .main .mainContacto .ubicacionContainer .ubicacion .ubicacionTexto {
         text-align: left;
         color: #ffffff; }
-        .mainContacto .ubicacionContainer .ubicacion .ubicacionTexto p {
+        .main .mainContacto .ubicacionContainer .ubicacion .ubicacionTexto p {
           font-size: 1.5rem;
           color: #ffffff; }
-        .mainContacto .ubicacionContainer .ubicacion .ubicacionTexto h2 {
+        .main .mainContacto .ubicacionContainer .ubicacion .ubicacionTexto h2 {
           font-weight: 500;
           color: #ffffff; }
 
-.containerPerfil {
+.main .containerPerfil {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   margin-top: 0.3rem; }
-  .containerPerfil .mainPefil:hover {
-    transform: scale(1.03); }
-  .containerPerfil .mainPefil {
+  .main .containerPerfil .mainPefil {
     display: flex;
     flex-direction: column;
     width: auto;
@@ -287,46 +267,41 @@
     border-radius: 30px;
     margin: 2rem;
     box-shadow: 7px 13px 37px rgba(0, 0, 0, 0.6); }
-    .containerPerfil .mainPefil img {
+    .main .containerPerfil .mainPefil div img {
+      width: 100%;
       border-radius: 30px 30px 0px 0px; }
-    .containerPerfil .mainPefil section {
+    .main .containerPerfil .mainPefil section {
       background-color: #9c1ede;
       padding: 10px;
       overflow: hidden;
       text-align: center; }
-      .containerPerfil .mainPefil section h2 {
+      .main .containerPerfil .mainPefil section h2 {
         margin: 0.5em 0;
         color: #ffffff; }
-      .containerPerfil .mainPefil section h3 {
+      .main .containerPerfil .mainPefil section h3 {
         color: #ffffff; }
-      .containerPerfil .mainPefil section p {
+      .main .containerPerfil .mainPefil section p {
         margin: 1em 0;
         color: #ffffff; }
-      .containerPerfil .mainPefil section ul li {
-        list-style: none;
-        display: inline-block;
-        margin: 0.5em 0.2em; }
-        .containerPerfil .mainPefil section ul li a {
-          text-decoration: none;
-          background-color: #314652;
-          color: white;
-          width: 30px;
-          height: 30px;
-          line-height: 30px !important;
-          border-radius: 5px;
-          transition: all 0.17s ease-in-out; }
-        .containerPerfil .mainPefil section ul li a:hover {
-          transform: scale(1.3); }
-    .containerPerfil .mainPefil .footerPerfil {
-      width: 100%;
-      height: 65px;
-      color: white;
-      font-weight: 500;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      padding: 0;
-      gap: 10px; }
+      .main .containerPerfil .mainPefil section ul {
+        padding: 0; }
+        .main .containerPerfil .mainPefil section ul li {
+          list-style: none;
+          display: inline-block;
+          margin: 0.5em 0.2em; }
+          .main .containerPerfil .mainPefil section ul li a {
+            text-decoration: none;
+            background-color: #314652;
+            color: white;
+            width: 30px;
+            height: 30px;
+            line-height: 30px !important;
+            border-radius: 5px;
+            transition: all 0.17s ease-in-out; }
+          .main .containerPerfil .mainPefil section ul li a:hover {
+            transform: scale(1.3); }
+    .main .containerPerfil .mainPefil .mainPefil:hover {
+      transform: scale(1.03); }
 
 .mainProducto {
   padding-top: 1rem; }
