--- a/scss/_mainRegistro.scss
+++ b/scss/_mainRegistro.scss
@@ -4,7 +4,6 @@
         justify-content: center;
         align-content: center;
         font-size: 2.5rem;
-        font-family: 'Courier New', Courier, monospace;
         font-weight: 600;
         display: flex;
         padding-top: 1.5rem;
@@ -15,11 +14,10 @@
         justify-content: center;
         .form {
             background-color: $colorRosaGD;
-            width: 35%;
             margin: 2rem;
             justify-content: center;
             min-width: 200px;
-            max-width: 600px;
+            max-width: 500px;
             border-radius: 1.5rem;
             padding:1.5rem;
             text-align: center;
@@ -29,11 +27,8 @@
                 color: $colorNegro;
             }
             input{
-                padding: 0.15rem;
-                margin: 0.15rem;
                 padding: 0.5rem;
-                font-size: 1rem;
-                font-family:Georgia, 'Times New Roman', Times, serif;
+                font-size: 1.13rem;
                 text-align: center;
                 width: 100%;
             }
@@ -42,46 +37,39 @@
                 border: 2px solid $colorNaranjaGD;
                 border-radius: 2px;
             }
-        }
-    }
-}
-
-
-.main{
-    .main__registro{
-        .formularios{
-            .form{ 
-                .form_1{
+            .form_1{
+                color: $colorNegro;
+                font-size: 1.13rem;
+                p{
+                    width: 100%;
                     color: $colorNegro;
-                    font-size: 1rem;
-                    p{
-                        width: 100%;
-                        color: $colorNegro;
-                        font-size: larger;
+                    font-size: larger;
+                }
+            }
+            .form_2{
+                color: $colorNegro;
+                font-size: 1.13rem;
+                p{
+                    width: 100%;
+                    color: $colorNegro;
+                    font-size: larger;
+                }
+                .registrarse {
+                    margin: 1rem;
+                    padding: 0.5rem;
+                    button{
+                        font-size: 1.2rem;
+                        padding: 0.5rem;
+                        background-color: $colorBlanco;
+                        border-radius: 0.3rem;
+                        border-style: none;
+                        font-weight: 500;
+                        border: 0;
                     }
                 }
-                .form_2{
-                    color: $colorNegro;
-                    font-size: 1rem;
-                    p{
-                        width: 100%;
-                        color: $colorNegro;
-                        font-size: larger;
-                    }
-                    .registrarse {
-                        margin: 1rem;
-                        padding: 0.5rem;
-                        button{
-                            font-size: 1rem;
-                            padding: 0.5rem;
-                            background-color: $colorBlanco;
-                            border-radius: 0.3rem;
-                            border-style: none;
-                            font-weight: 500;
-                        }
-                    }
-                }  
             }
         }
     }
 }
+
+
