agregando titulo y cambiando el tittle de todas las paginas

--- a/scss/_mainRegistro.scss
+++ b/scss/_mainRegistro.scss
@@ -3,11 +3,11 @@
         color: $colorBlanco;
         justify-content: center;
         align-content: center;
-        font-size: 2.5rem;
-        font-weight: 600;
+        font-size: 2.5vh;
         display: flex;
         padding-top: 1.5rem;
         margin-top: 0.3rem;
+        font-family: 'Courier New', Courier, monospace;
     }
     .formularios{
         display: flex;
