--- a/css/style.css
+++ b/css/style.css
@@ -141,11 +141,11 @@ header {
   color: #ffffff;
   justify-content: center;
   align-content: center;
-  font-size: 2.5rem;
-  font-weight: 600;
+  font-size: 2.5vh;
   display: flex;
   padding-top: 1.5rem;
-  margin-top: 0.3rem; }
+  margin-top: 0.3rem;
+  font-family: 'Courier New', Courier, monospace; }
 
 .main__registro .formularios {
   display: flex;
@@ -247,6 +247,17 @@ header {
           font-weight: 500;
           color: #ffffff; }
 
+.main .titulo {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  font-size: 1.5rem;
+  font-family: 'Courier New', Courier, monospace;
+  color: #ffffff;
+  align-items: center;
+  padding: 2rem 0rem 0rem 0rem;
+  margin: 0.3rem 0 0 0; }
+
 .main .containerPerfil {
   display: flex;
   flex-direction: column;
@@ -296,6 +307,44 @@ header {
             transform: scale(1.3); }
     .main .containerPerfil .mainPefil .mainPefil:hover {
       transform: scale(1.03); }
+
+.mainProducto {
+  padding-top: 1rem; }
+  .mainProducto .targetaPrecio {
+    width: 500px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #f8af40;
+    padding-bottom: 2rem; }
+    .mainProducto .targetaPrecio h2 {
+      font-size: 1.5rem;
+      width: 60%;
+      background-color: #9c1ede;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      border-radius: 20px; }
+    .mainProducto .targetaPrecio h3 {
+      font-size: 1rem; }
+    .mainProducto .targetaPrecio p {
+      font-size: 1rem;
+      padding: 0rem 2rem; }
+    .mainProducto .targetaPrecio img {
+      width: 80%; }
+  .mainProducto .filtrosProductos {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center; }
+    .mainProducto .filtrosProductos button {
+      padding: 0.5rem;
+      background-color: #ffffff;
+      font-size: 1rem; }
+  .mainProducto .productos h1 {
+    font-size: 1rem;
+    color: #ffffff; }
 
 @media (max-width: 700px) {
   .container {
