--- a/scss/_mainPerfil.scss
+++ b/scss/_mainPerfil.scss
@@ -1,4 +1,15 @@
 .main{
+    .titulo{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        font-size: 1.5rem;
+        font-family: 'Courier New', Courier, monospace;
+        color: $colorBlanco;
+        align-items: center;
+        padding: 2rem 0rem 0rem 0rem;
+        margin: 0.3rem 0 0 0;
+    }
     .containerPerfil{
         display: flex;
         flex-direction: column;
