--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,41 @@
   padding: 0;
   box-sizing: border-box; }
 
+.btnPrincipal {
+  padding: 5px 10px;
+  border: 0;
+  border-radius: 2px;
+  color: #000;
+  margin: 0.3rem;
+  background-color: #fff;
+  max-height: 30px;
+  font-size: 1rem;
+  font-weight: 450; }
+
+.btn-colorPrimario {
+  color: #141D3C; }
+
+.btn-colorSecundario {
+  color: #02AFFE; }
+
+.btn-colorBlanco {
+  color: #ffffff; }
+
+.btn-colorNaranjaGD {
+  color: #f8af40; }
+
+.btn-colorNegro {
+  color: #000; }
+
+.btn-colorRosaGD {
+  color: #ddb6f1; }
+
+.btn-colorMorado {
+  color: #9c1ede; }
+
+.btn-ColorGris {
+  color: #314652; }
+
 .main {
   grid-area: main;
   background-color: #141D3C;
@@ -309,7 +344,7 @@ header {
       transform: scale(1.03); }
 
 .mainProducto {
-  padding-top: 1rem; }
+  padding: 0.5rem; }
   .mainProducto .targetaPrecio {
     width: 500px;
     display: flex;
@@ -338,10 +373,6 @@ header {
     display: flex;
     justify-content: space-evenly;
     align-items: center; }
-    .mainProducto .filtrosProductos button {
-      padding: 0.5rem;
-      background-color: #ffffff;
-      font-size: 1rem; }
   .mainProducto .productos h1 {
     font-size: 1rem;
     color: #ffffff; }
