--- a/scss/main.css
+++ b/scss/main.css
@@ -4,6 +4,50 @@
   box-sizing: border-box;
 }
 
+.btnPrincipal {
+  padding: 5px 10px;
+  border: 0;
+  border-radius: 2px;
+  color: #000;
+  margin: 0.3rem;
+  background-color: #fff;
+  max-height: 30px;
+  font-size: 1rem;
+  font-weight: 450;
+}
+
+.btn-colorPrimario {
+  color: #141D3C;
+}
+
+.btn-colorSecundario {
+  color: #02AFFE;
+}
+
+.btn-colorBlanco {
+  color: #ffffff;
+}
+
+.btn-colorNaranjaGD {
+  color: #f8af40;
+}
+
+.btn-colorNegro {
+  color: #000;
+}
+
+.btn-colorRosaGD {
+  color: #ddb6f1;
+}
+
+.btn-colorMorado {
+  color: #9c1ede;
+}
+
+.btn-ColorGris {
+  color: #314652;
+}
+
 .main {
   grid-area: main;
   background-color: #141D3C;
@@ -167,11 +211,11 @@ header .navbar .container-fluid .logo {
   color: #ffffff;
   justify-content: center;
   align-content: center;
-  font-size: 2.5rem;
-  font-weight: 600;
+  font-size: 2.5vh;
   display: flex;
   padding-top: 1.5rem;
   margin-top: 0.3rem;
+  font-family: "Courier New", Courier, monospace;
 }
 .main__registro .formularios {
   display: flex;
@@ -294,6 +338,17 @@ header .navbar .container-fluid .logo {
   color: #ffffff;
 }
 
+.main .titulo {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  font-size: 1.5rem;
+  font-family: "Courier New", Courier, monospace;
+  color: #ffffff;
+  align-items: center;
+  padding: 2rem 0rem 0rem 0rem;
+  margin: 0.3rem 0 0 0;
+}
 .main .containerPerfil {
   display: flex;
   flex-direction: column;
@@ -356,6 +411,48 @@ header .navbar .container-fluid .logo {
   transform: scale(1.03);
 }
 
+.mainProducto {
+  padding: 0.5rem;
+}
+.mainProducto .targetaPrecio {
+  width: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #f8af40;
+  padding-bottom: 2rem;
+}
+.mainProducto .targetaPrecio h2 {
+  font-size: 1.5rem;
+  width: 60%;
+  background-color: #9c1ede;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 20px;
+}
+.mainProducto .targetaPrecio h3 {
+  font-size: 1rem;
+}
+.mainProducto .targetaPrecio p {
+  font-size: 1rem;
+  padding: 0rem 2rem;
+}
+.mainProducto .targetaPrecio img {
+  width: 80%;
+}
+.mainProducto .filtrosProductos {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.mainProducto .productos h1 {
+  font-size: 1rem;
+  color: #ffffff;
+}
+
 @media (max-width: 700px) {
   .container {
     display: flex;
@@ -369,7 +466,6 @@ header .navbar .container-fluid .logo {
     gap: 1rem;
     padding: 1rem;
   }
-
   /* .main_contacto{
       flex-direction: column;
       justify-content: center;
@@ -379,21 +475,17 @@ header .navbar .container-fluid .logo {
   .aside {
     width: 100%;
   }
-
   .header {
     flex-direction: flex;
     padding: 1rem;
   }
-
   .header nav ul {
     flex-direction: column;
   }
-
   .header nav ul li a {
     border-right: none;
     padding: 1rem;
   }
-
   .header nav {
     padding-right: 0px;
   }
