Agregando map de los titulos

--- a/scss/_main_index.scss
+++ b/scss/_main_index.scss
@@ -3,6 +3,7 @@
     background-color: $colorPrimario;
     color: $colorBlanco;
     justify-content: center;
+    margin-top: 0.3rem;
     .main__index{
         .filtros{
             background-color: $colorNaranjaGD;
