--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,17 @@
   padding: 0;
   box-sizing: border-box; }
 
+.tituloPrincipal {
+  padding: 1rem;
+  font-size: 1.75rem;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  font-weight: 320;
+  margin: 0rem;
+  font-family: 'Courier New', Courier, monospace; }
+
 .btnPrincipal {
   padding: 5px 10px;
   border: 0;
@@ -42,7 +53,8 @@
   grid-area: main;
   background-color: #141D3C;
   color: #ffffff;
-  justify-content: center; }
+  justify-content: center;
+  margin-top: 0.3rem; }
   .main .main__index .filtros {
     background-color: #f8af40;
     align-items: center;
@@ -172,16 +184,6 @@ header {
       padding: 1rem;
       border-right: 1px solid #000; }
 
-.main__registro h1 {
-  color: #ffffff;
-  justify-content: center;
-  align-content: center;
-  font-size: 2.5vh;
-  display: flex;
-  padding-top: 1.5rem;
-  margin-top: 0.3rem;
-  font-family: 'Courier New', Courier, monospace; }
-
 .main__registro .formularios {
   display: flex;
   justify-content: center; }
@@ -202,25 +204,26 @@ header {
       padding: 0.5rem;
       font-size: 1.13rem;
       text-align: center;
-      width: 100%; }
+      width: 100%;
+      font-weight: 500; }
     .main__registro .formularios .form :focus {
       outline: none;
       border: 2px solid #f8af40;
       border-radius: 2px; }
     .main__registro .formularios .form .form_1 {
       color: #000;
-      font-size: 1.13rem; }
+      font-size: 1.13rem;
+      font-weight: 500; }
       .main__registro .formularios .form .form_1 p {
         width: 100%;
-        color: #000;
-        font-size: larger; }
+        color: #000; }
     .main__registro .formularios .form .form_2 {
       color: #000;
-      font-size: 1.13rem; }
+      font-size: 1.13rem;
+      font-weight: 500; }
       .main__registro .formularios .form .form_2 p {
         width: 100%;
-        color: #000;
-        font-size: larger; }
+        color: #000; }
       .main__registro .formularios .form .form_2 .registrarse {
         margin: 1rem;
         padding: 0.5rem; }
@@ -245,17 +248,8 @@ header {
     justify-content: center;
     flex-direction: column;
     width: 80%;
-    max-width: 37.5rem; }
-    .main .mainContacto .textoContacto h1 {
-      color: #ffffff;
-      justify-content: center;
-      align-content: center;
-      font-size: 2.5rem;
-      font-family: 'Courier New', Courier, monospace;
-      font-weight: 600;
-      display: flex;
-      padding-top: 1.5rem;
-      margin-top: 0.3rem; }
+    max-width: 37.5rem;
+    padding: 0.75rem; }
     .main .mainContacto .textoContacto p {
       display: flex;
       justify-content: center; }
@@ -297,8 +291,7 @@ header {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
-  margin-top: 0.3rem; }
+  align-items: center; }
   .main .containerPerfil .mainPefil {
     display: flex;
     flex-direction: column;
@@ -319,9 +312,6 @@ header {
         margin: 0.5em 0;
         color: #ffffff; }
       .main .containerPerfil .mainPefil section h3 {
-        color: #ffffff; }
-      .main .containerPerfil .mainPefil section p {
-        margin: 1em 0;
         color: #ffffff; }
       .main .containerPerfil .mainPefil section ul {
         padding: 0; }
