--- a/scss/_mainContacto.scss
+++ b/scss/_mainContacto.scss
@@ -12,17 +12,7 @@
             flex-direction: column;
             width: 80%;
             max-width: 37.5rem;
-            h1{
-                color: $colorBlanco;
-                justify-content: center;
-                align-content: center;
-                font-size: 2.5rem;
-                font-family: 'Courier New', Courier, monospace;
-                font-weight: 600;
-                display: flex;
-                padding-top: 1.5rem;
-                margin-top: 0.3rem;
-            }
+            padding: 0.75rem;
             p{
                 display: flex;
                 justify-content: center;
