--- a/scss/_mainRegistro.scss
+++ b/scss/_mainRegistro.scss
@@ -1,14 +1,5 @@
 .main__registro{
-    h1{
-        color: $colorBlanco;
-        justify-content: center;
-        align-content: center;
-        font-size: 2.5vh;
-        display: flex;
-        padding-top: 1.5rem;
-        margin-top: 0.3rem;
-        font-family: 'Courier New', Courier, monospace;
-    }
+
     .formularios{
         display: flex;
         justify-content: center;
@@ -31,6 +22,7 @@
                 font-size: 1.13rem;
                 text-align: center;
                 width: 100%;
+                font-weight: 500;
             }
             :focus{
                 outline: none;
@@ -40,19 +32,19 @@
             .form_1{
                 color: $colorNegro;
                 font-size: 1.13rem;
+                font-weight: 500;
                 p{
                     width: 100%;
                     color: $colorNegro;
-                    font-size: larger;
                 }
             }
             .form_2{
                 color: $colorNegro;
                 font-size: 1.13rem;
+                font-weight: 500;
                 p{
                     width: 100%;
                     color: $colorNegro;
-                    font-size: larger;
                 }
                 .registrarse {
                     margin: 1rem;
