--- a/css/style.css
+++ b/css/style.css
@@ -53,8 +53,7 @@
   grid-area: main;
   background-color: #141D3C;
   color: #ffffff;
-  justify-content: center;
-  margin-top: 0.3rem; }
+  justify-content: center; }
   .main .main__index .filtros {
     background-color: #f8af40;
     align-items: center;
@@ -62,20 +61,19 @@
     max-height: 300px;
     width: 100%;
     color: #000;
-    font-weight: 650;
-    font-size: 0.8rem;
+    font-size: 0.75rem;
     display: flex;
-    text-align: center;
-    padding: 0.5rem 1rem;
-    margin-top: 0.3rem; }
+    text-align: center; }
     .main .main__index .filtros .filtro_1 {
       padding: 0.2rem; }
       .main .main__index .filtros .filtro_1 h5 {
-        font-size: 1rem; }
+        font-size: 1rem;
+        font-weight: 400; }
     .main .main__index .filtros .filtro_2 {
       padding: 0.2rem; }
       .main .main__index .filtros .filtro_2 h5 {
-        font-size: 1rem; }
+        font-size: 1rem;
+        font-weight: 400; }
     .main .main__index .filtros button {
       background-color: #ffffff;
       border-radius: 0.5rem;
@@ -248,11 +246,7 @@ header {
     justify-content: center;
     flex-direction: column;
     width: 80%;
-    max-width: 37.5rem;
-    padding: 0.75rem; }
-    .main .mainContacto .textoContacto p {
-      display: flex;
-      justify-content: center; }
+    max-width: 37.5rem; }
   .main .mainContacto .carruselesContacto {
     justify-content: center;
     width: 100%;
