--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,8 @@
   grid-area: main;
   background-color: #141D3C;
   color: #ffffff;
-  justify-content: center; }
+  justify-content: center;
+  margin-top: 0.3rem; }
   .main .main__index .filtros {
     background-color: #f8af40;
     align-items: center;
